Wed Jun 23 21:17:32 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
	  patch by Wataru Kimura.  [ruby-core:30842]

Wed Jun 23 06:44:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (fchown): need to check.  a patch by Eric Wong
	  at [ruby-core:30818].

	* io.c (argf_next_argv): check for setting owner/group.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Sat Jun 19 03:35:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb (resolve_klass): fix the
	  exception message when attempting to load an unknown class.  Thanks
	  nobu! [ruby-dev:41399]

	* test/psych/test_psych.rb: test for the exception message

Fri Jun 18 01:50:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* object.c: Object#public_methods, private_methods, etc. returns
	  method ids that belong to the class or the singleton class(es) of
	  the object.  [ruby-dev:41613]

	* class.c: on the other hand, Module#public_instance_methods, etc.
	  returns method ids that belong to the module itself (even if the
	  module is singleton, it does not return method ids of super
	  class(es); see [ruby-core:28837]).

Tue Jun 29 21:16:05 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/stringio/stringio.c (strio_write): add RB_GC_GUARD.

Tue Jun 29 14:41:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_realpath_internal, realpath_rec): skip UNC share root
	  on DOSISH platforms.
	  http://pc12.2ch.net/test/read.cgi/tech/1272248179/600

Tue Jun 29 06:41:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter (fix
	  [ruby-core:30358]). And hide a root window before starting eventloop.

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks